--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ export FLASK_DEBUG=1
 
 export S3_BUCKET=<your bucket name>
 export S3_KEY=<your key>
-export S3_SECRET_ACESS_KEY=<your secret key>
+export S3_SECRET=<your secret key>
